force-app/main/default/objects/Opco_Public_Group__mdt/Opco_Public_Group__mdt.object-meta.xml
<CustomObject>
    <label>Opco Public Group</label>
    <pluralLabel>Opco Public Group Mappings</pluralLabel>
</CustomObject>