force-app/main/default/objects/Opco_Public_Group__mdt/fields/Approval_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Name__c</fullName>
    <label>Approval Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>