force-app/main/default/objects/Opco_Public_Group__mdt/fields/Opco__c.field-meta.xml
<CustomField>
    <fullName>Opco__c</fullName>
    <label>Opco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
                <default>true</default>
                <label>India</label>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Belux</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
            <value>
                <fullName>Romania</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Swiss</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>