force-app/main/default/objects/Opco_Public_Group__mdt/fields/Public_group__c.field-meta.xml
<CustomField>
    <fullName>Public_group__c</fullName>
    <label>Public group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>